--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvTy5vO5FADLbQE9dmM7B6uxI7vRs50GXPcQ&usqp=CAU" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hi {{name}}!</h1>
                         <hr class="star-light">
